Fix transcript close icon position on small viewports (#103)
* Add uploads

* Tweak transcript close button position

--- a/themes/blankslate-child/sass/components/_tease-project.scss
+++ b/themes/blankslate-child/sass/components/_tease-project.scss
@@ -115,14 +115,18 @@
   min-height: var(--size-550); // SEE: `$_share-icon-size`
 
   &[aria-pressed="true"] {
-    background: var(--color-gray-lightest) url('/wp-content/themes/blankslate-child/images/icon-close.svg') no-repeat center left -15%;
+    background: var(--color-gray-lightest) url('/wp-content/themes/blankslate-child/images/icon-close.svg') no-repeat center left -3%;
     background-size: 30% 30%;
     border-color: var(--color-gray-lightest);
     color: var(--color-black);
     height: var(--size-800);
 
+    @media (min-width: $breakpoint-300) {
+      background-position-x: -15%;
+    }
+
     @media (min-width: $breakpoint-700) {
-      background-position-x: -10%;;
+      background-position-x: -10%;
     }
   }
 
